@@ -5,3 +5,4 @@ Maintainer since v24: Jameson Quinn (email firstname dot lastname at gmail com)
 
 Patches were submitted by:
 Mike C. Fletcher (support for jhbuild, newer gtksourceview)
+                
