@@ -1,26 +1,30 @@
+NEWS
+new_activity.py
 activity.py
 develop_app.py
-activity_model.py
 sourceview_editor.py
-new_activity.py
-welcome_dialog.py
 setup.py
-activity/activity-develop.svg
-activity/activity.info
 CREDITS
-NEWS
 developrunner.sh
+developableactivity.py
+welcome_dialog.py
+bundle.py
+activity_model.py
 logviewer.py
 bundlebuilder.py
-developableactivity.py
-icons/erase.svg
-icons/multi-regex.svg
-icons/multi-replace.svg
-icons/multi-search.svg
-icons/regex-in-selection.svg
-icons/regex.svg
-icons/replace-and-find.svg
-icons/search-in-selection.svg
-icons/system-replace.svg
-icons/ignore-caps.svg
+activitybundle.py
+po/Develop.pot
 icons/use-caps.svg
+icons/regex-in-selection.svg
+icons/multi-regex.svg
+icons/multi-search.svg
+icons/regex.svg
+icons/multi-replace.svg
+icons/ignore-caps.svg
+icons/erase.svg
+icons/search-in-selection.svg
+icons/replace-and-find.svg
+icons/system-replace.svg
+activity/activity-default.svg
+activity/activity.info
+activity/activity-develop.svg
