@@ -4,7 +4,7 @@ bundle_id = org.laptop.Develop
 service_name = org.laptop.Develop
 exec = sugar-activity develop_app.DevelopActivity -s
 icon = activity-develop
-activity_version = 34
+activity_version = 35
 mime_types = application/vnd.olpc-sugar;x/application/vnd.olpc-sugar;application/vnd.oasis.opendocument.text
 show_launcher = yes
 update_url = http://wiki.laptop.org/go/Develop
