@@ -50,7 +50,9 @@ class LogMinder(gtk.VBox):
         self.activity._logger.info('creating MultiLogView')
         if not path:
             # Main path to watch: ~/.sugar/someuser/logs...
-            path = os.path.join(env.get_profile_path(), 'logs')
+            path = os.path.join(self.activity._get_user_path(),
+                                ".sugar","default","logs")
+            #env.get_profile_path(), 'logs')
 
         if not extra_files:
             # extra files to watch in logviewer
