@@ -1,3 +1,6 @@
+35
+Fixed some conflicts with Rainbow - new activity now works.
+
 34
 uses new bundlebuilder, save and MANIFEST radically more stable
 many fixes
